# bot_mayak

./: .gitignore  README.md  bot.py  db_command.py  logger.py  pyproject.toml  utils.py
files/: marketplaces.xlsx
